--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
 
   <div id="tab-admin" class="tab">
     <h2>Админ: отчёт просроченных (XSLT)</h2>
-    <iframe src="/php-legacy/report.php" style="width:100%; height:500px; border:1px solid #ccc;"></iframe>
+    <iframe src="http://127.0.0.1/library/backend-php-legacy/report.php?type=overdue" style="width:100%; height:500px; border:1px solid #ccc;"></iframe>
   </div>
 
 <script>
